environments/dev/kubernetes/services/identity/auth-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  labels:
    app: auth-api
    env: dev
  namespace: identity
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-api
  revisionHistoryLimit: 1
  template:
    metadata:
      name: auth-api
      labels:
        env: dev
        app: auth-api
      annotations:
        steblynskyi.io/inject-secret: "true"
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: auth-api
        image: steblynskyi-docker.jfrog.io/identity-auth-api:2b04ce2
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 3000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: auth-api
  namespace: identity
  labels:
    Domain: identity-auth-api.dev-steblynskyi.com
spec:
  selector:
    app: auth-api
    env: dev
  ports:
  - port: 80
    name: http
    targetPort: 3000
    protocol: TCP
  type: NodePort
