environments/dev/kubernetes/services/identity/extensions-mfa-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extensions-mfa-api
  labels:
    app: extensions-mfa-api
    env: dev
  namespace: identity
spec:
  replicas: 2
  selector:
    matchLabels:
      app: extensions-mfa-api
  revisionHistoryLimit: 1
  template:
    metadata:
      name: extensions-mfa-api
      labels:
        app: extensions-mfa-api
        env: dev
      annotations:
        steblynskyi.io/inject-secret: "true"
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: extensions-mfa-api
        image: steblynskyi-docker.jfrog.io/identity-extensions-mfa-api:46c1875
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: extensions-mfa-api
  namespace: identity
  labels:
    Domain: identity-extensions-mfa-api.dev-steblynskyi.com
spec:
  selector:
    app: extensions-mfa-api
    env: dev
  ports:
  - port: 80
    name: http
    targetPort: 80
    protocol: TCP
  type: NodePort
