environments/dev/kubernetes/services/identity/identity-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-web
  labels:
    app: identity-web
    env: dev
  namespace: identity
spec:
  replicas: 2
  selector:
    matchLabels:
      app: identity-web
  revisionHistoryLimit: 1
  template:
    metadata:
      name: identity-web
      labels:
        env: dev
        app: identity-web
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: identity-web
        image: steblynskyi-docker.jfrog.io/identity-web:9cb3e97
        imagePullPolicy: Always
        args:
        - -base-path=/identity
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: identity-web
  namespace: identity
  labels:
    Domain: identity-web.dev-steblynskyi.com
spec:
  selector:
    app: identity-web
    env: dev
  ports:
  - port: 80
    name: http
    targetPort: 8080
    protocol: TCP
  type: NodePort
