environments/dev/kubernetes/services/identity/role-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: role-api
  labels:
    app: role-api
    env: dev
  namespace: identity
spec:
  replicas: 2
  selector:
    matchLabels:
      app: role-api
  revisionHistoryLimit: 1
  template:
    metadata:
      name: role-api
      labels:
        env: dev
        app: role-api
      annotations:
        steblynskyi.io/inject-secret: "true"
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: role-api
        image: steblynskyi-docker.jfrog.io/identity-role-api:e000a3c
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 250m
            memory: 384Mi
        ports:
        - containerPort: 5000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: role-api
  namespace: identity
  labels:
    Domain: identity-role-api.dev-steblynskyi.com
spec:
  selector:
    app: role-api
    env: dev
  ports:
  - port: 80
    name: http
    targetPort: 5000
    protocol: TCP
  type: NodePort
