environments/dev/kubernetes/services/identity/IDENTITY-INGRESS-INTERNAL.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-ingress-internal
  namespace: identity
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/target-node-labels: kops.k8s.io/instancegroup=nodes
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/tags: Environment=DEV,Name=IDENTITY-Ingress-Internal
    alb.ingress.kubernetes.io/subnets: subnet-1,subnet-2
    alb.ingress.kubernetes.io/security-groups: sg-1
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:123:certificate/111-222-333-444-55555
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=false,access_logs.s3.bucket=steblynskyi-dev-access-logs,access_logs.s3.prefix=identity,deletion_protection.enabled=true,routing.http2.enabled=true,idle_timeout.timeout_seconds=120
spec:
  rules:
  - host: identity-auth-api.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: auth-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: identity-role-api.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: role-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: identity-extensions-mfa-api.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: extensions-mfa-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: identity-api.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: identity-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: identity-extensions-authentication-api.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: extensions-authentication-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
